auth-service/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 4000
  selector:
    app: auth-service
  type: ClusterIP
